# VixenSnapZ

./: .example.env  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  migrator.py  nginx.conf  requirements.txt
backend/: Dockerfile
backend/app/: main.py  pyproject.toml
backend/app/dependencies/: exceptions.py  lifecycle.py  pydantic_model.py
backend/app/libraries/: database.py  s3_handler.py
backend/app/routers/: __init__.py
backend/app/routers/authorization/: authorization.py  config.py  dependencies.py  models.py  pydantic_models.py  responses.py  service.py  validators.py
backend/app/routers/categories/: categories.py  models.py  responses.py  service.py
backend/app/routers/frames/: frames.py  models.py  pydantic_models.py  responses.py  service.py  validators.py
backend/app/storages/: database.py  s3.py
backend/app/storages/types/: files.py
backend/tests/: test.py
libraries/: database.py  database_migrator.py  example.env  minio_handler.py  request_helper.py
libraries_deprecated/: database.py  database_migrator.py  minio_handler.py  request_helper.py
migrations/: 002_users-2022-06-10-19-18-18.py  003_files-2022-06-10-20-30-30.py  004_alter_files-2022-06-10-21-25-42.py
project/: main.py  requirements.txt  run.sh
project/libraries/: authenticator.py  database.py  decorators.py  depends.py  s3_handler.py
project/routers/: frames.py
project/routers/authorization/: models.py  (+4 more)
routes/: authroutes.py  frames.py
tests/: authorization.py  delete_file.py  get_all_user_files.py  get_one_file.py  registration.py  send_files.py
(+5 files in other folders)
