[tool.poetry]
name = "vixensnapz"
version = "1.0.2"
description = ""
authors = ["DarkLorianPrime <lolpokens@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.15"
fastapi = "^0.95.2"
minio = "^7.1.14"
pytz = "^2023.3"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
