[tool.poetry]
name = "vixensnapz"
version = "1.0.2"
description = ""
authors = ["DarkLorianPrime <lolpokens@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
httpx = "^0.25.0"
minio = "^7.1.17"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
pytz = "^2023.3.post1"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
